RESOLVED FIXED156372
[OS X] Flakey crash after ScrollAnimatorMac destruction
https://bugs.webkit.org/show_bug.cgi?id=156372
Summary [OS X] Flakey crash after ScrollAnimatorMac destruction
Myles C. Maxfield
Reported 2016-04-07 15:26:21 PDT
[OS X] Flakey crash after ScrollAnimatorMac destruction
Attachments
Patch (4.56 KB, patch)
2016-04-07 15:41 PDT, Myles C. Maxfield
mmaxfield: review-
WIP (4.52 KB, patch)
2016-04-07 15:47 PDT, Myles C. Maxfield
buildbot: commit-queue-
Archive of layout-test-results from ews100 for mac-yosemite (849.56 KB, application/zip)
2016-04-07 16:31 PDT, Build Bot
no flags
WIP (10.85 KB, patch)
2016-04-11 20:51 PDT, Myles C. Maxfield
no flags
Patch (13.77 KB, patch)
2016-04-11 21:57 PDT, Myles C. Maxfield
darin: review+
buildbot: commit-queue-
Archive of layout-test-results from ews124 for ios-simulator-wk2 (641.11 KB, application/zip)
2016-04-11 22:49 PDT, Build Bot
no flags
Myles C. Maxfield
Comment 1 2016-04-07 15:41:24 PDT
Myles C. Maxfield
Comment 2 2016-04-07 15:46:29 PDT
Comment on attachment 275948 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=275948&action=review > Source/WebCore/ChangeLog:24 > + does not. This is false. The only subclass of ScrollView (namely, FrameView) already does this. Because ScrollView is abstract, this deregistration must already occur.
Myles C. Maxfield
Comment 3 2016-04-07 15:47:11 PDT
Build Bot
Comment 4 2016-04-07 16:31:49 PDT
Comment on attachment 275949 [details] WIP Attachment 275949 [details] did not pass mac-ews (mac): Output: http://webkit-queues.webkit.org/results/1117244 New failing tests: fast/scrolling/scrollbar-mousedown-mouseup.html
Build Bot
Comment 5 2016-04-07 16:31:52 PDT
Created attachment 275954 [details] Archive of layout-test-results from ews100 for mac-yosemite The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-yosemite Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 6 2016-04-11 20:51:53 PDT
Myles C. Maxfield
Comment 7 2016-04-11 21:57:59 PDT
Darin Adler
Comment 8 2016-04-11 22:03:18 PDT
Comment on attachment 276217 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=276217&action=review > Source/WebCore/page/Settings.cpp:632 > +// It's very important that this setting doesn't change in the middle of a document's lifetime. > +// The Mac port uses this flag when registering and deregistering platform-dependent scrollbar > +// objects. Therefore, if this changes at an unexpected time, deregistration may not happen > +// correctly, which may cause the platform to follow dangling pointers. This doesn’t sound good! Seems bad to have the code be fragile in this manner. Might be fixable.
Build Bot
Comment 9 2016-04-11 22:49:43 PDT
Comment on attachment 276217 [details] Patch Attachment 276217 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1140009 New failing tests: fast/scrolling/rtl-scrollbars-animation-property.html
Build Bot
Comment 10 2016-04-11 22:49:47 PDT
Created attachment 276223 [details] Archive of layout-test-results from ews124 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews124 Port: ios-simulator-wk2 Platform: Mac OS X 10.10.5
Myles C. Maxfield
Comment 11 2016-04-12 11:33:52 PDT
Note You need to log in before you can comment on or make changes to this bug.